--- a/index.html
+++ b/index.html
@@ -3,43 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robotics Club IIT BHU</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <title>Robotics Club Website</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#team">Team</a></li>
+                <li><a href="#intro">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <section id="home">
-        <h1>Welcome to Robotics Club IIT BHU</h1>
-    </section>
-    <section id="about">
-        <h2>About Us</h2>
-        <p>Information about the club...</p>
-    </section>
-    <section id="projects">
-        <h2>Our Projects</h2>
-        <p>Details about projects...</p>
-    </section>
-    <section id="team">
-        <h2>Meet the Team</h2>
-        <p>Information about team members...</p>
-    </section>
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>Contact details...</p>
-    </section>
+    <main>
+        <section id="intro">
+            <div class="Container">
+                <img src="concept-robots-FJED81.jpg" alt="Robotics Club Image">
+                <h2>Welcome to Robotics Club</h2>
+            </div>
+        </section>
+        <section id="about">
+            <div class="container">
+                <h1>About Us</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, similique?</p>
+                <ul>
+                    <li>Robotics Club Mission</li>
+                    <li>Our Achievements</li>
+                    <li>Meet Our Team</li>
+                </ul>
+            </div>
+        </section>
+        <section id="contact">
+            <div class="container">
+                <h1>Get in Touch</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, laudantium.</p>
+                <ul>
+                    <li>Email ID</li>
+                    <li>Instagram ID</li>
+                    <li>Facebook ID</li>
+                </ul>
+            </div>
+        </section>
+    </main>
     <footer>
-        <p>&copy; 2024 Robotics Club IIT BHU</p>
+        <p>&copy; Copyright 2024 Robotics Club. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
