--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </header>
     <main>
         <section id="intro">
-            <div class="Container">
-                <img src="concept-robots-FJED81.jpg" alt="Robotics Club Image">
+            <div class="container">
+                <img src="images/concept-robots-FJED81.jpg" alt="Robotics Club Image">
                 <h2>Welcome to Robotics Club</h2>
             </div>
         </section>
@@ -49,5 +49,11 @@
     <footer>
         <p>&copy; Copyright 2024 Robotics Club. All Rights Reserved.</p>
     </footer>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            // Your JavaScript code here
+        });
+    </script>
 </body>
 </html>
+
